# corepost-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml  server.conf
docker/: launch-instance.sh  stop-instance.sh
docker/instances/: agent.env  mobile-android.env  mobile-ios.env  preboot.env
src/corepost_server/: __init__.py  __main__.py  app.py  config.py  db.py  main.py  schemas.py  security.py  service.py
tests/: test_api.py
